【Task】add village information UI view

--- a/04.system API note.md
+++ b/04.system API note.md
@@ -15,8 +15,8 @@ data: data
 
 修改一条公告
 URL：‘/village/info/’
-Method: get
-data: put
+Method: put
+data: data
 
 删除一条公告
 URL：‘/village/info/’ + informationId
